<resources>
    <string name="app_name">Taskr</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="activity_login_username_text_default">"Username"</string>
    <string name="activity_login_existing_user_button">"Log In"</string>
    <string name="activity_login_new_user_button">"New User"</string>

    <string name="activity_edit_user_name">"Name"</string>
    <string name="activity_edit_user_email">"Email"</string>
    <string name="activity_edit_user_phone_number">"Phone Number"</string>
    <string name="activity_edit_apply_changes">"Apply Changes"</string>

    <string name="activity_view_tasks_provider_done">Mark as Done</string>
    <string name="activity_view_tasks_provider_reopen">Reopen</string>
    <string name="activity_view_tasks_requester_add_bid">Add Bid</string>
    <string name="activity_view_tasks_requester_edit_task">Edit Task</string>

    <string name="activity_view_tasks_lowest_bid">Top Bid: $%.2f</string>
    <string name="activity_view_tasks_error_generic_title">Error</string>
    <string name="activity_view_tasks_error_dismiss">OK</string>
    <string name="activity_view_tasks_error_edit">Tasks with bids cannot be edited.</string>
    <string name="activity_view_tasks_error_mark_done">Tasks must be assigned to be marked done.</string>
    <string name="activity_view_tasks_error_reopen">Tasks must be assigned to be reopened.</string>
    <string name="activity_view_tasks_error_add_bid">Cannot bid on assigned or done tasks.</string>
    <string name="activity_view_tasks_error_delete">Cannot delete tasks with bids that are not done.</string>

    <string name="row_bid_amount">$%.2f</string>

    <string name="fragment_edit_bid_enter_amount">Amount:</string>
    <string name="fragment_edit_bid_new">Bid!</string>
    <string name="fragment_edit_bid">Edit Bid</string>
    <string name="fragment_edit_bid_save_changes">Save</string>
    <string name="fragment_accept_bid_title">Accept Bid</string>
    <string name="fragment_accept_bid_username">from %1$s?</string>
    <string name="fragment_accept_bid_remove">Decline</string>
    <string name="fragment_accept_bid_yes">Yes</string>

    <string name="prefs_name">"TaskrPrefs"</string>
    <string name="sf_username_key">Username</string>
    <string name="sf_message_number_key">Username</string>


    <!-- Add Location to Task Strings. -->
    <string name="activity_add_location_to_task_text">"Choose a Location"</string>
    <string name="activity_add_location_to_task_button">"Add Location"</string>
    <string name="access_token">"pk.eyJ1IjoiYmFybmFidXN0aGViZW5pZ24iLCJhIjoiY2pldWI2MHN2NGhrZDJxbWU4dHdubmwxYSJ9.ZVq95tHTxTgyyppAfj3Jdw"</string>

    <string name="style_url">"mapbox://styles/msnihur/cjexeh38k389i2rlqo787jn0y"</string>

    <string name="activity_edit_task_post_task">"Post Task"</string>
    <string name="activity_edit_task_get_location">"Get Location"</string>
    <string name="activity_edit_task_task_title">"Task Title"</string>
    <string name="activity_edit_task_address">"Address"</string>
    <string name="activity_edit_task_details">"Details"</string>

    <string name="activity_my_tasks_add_task">"+ Add Task"</string>
    <string name="prefs_user">user_key</string>
    <string name="my_bids">My Bids</string>
    <string name="my_tasks">My Tasks</string>
    <string name="taskimages">TaskImages</string>
    <string name="add_photos">Add Photos</string>
    <string name="select_photo_from_gallery">Select photo from gallery</string>
    <string name="take_photo">Take Photo</string>
    <string name="add_edit_task">Add/Edit Task</string>
    <string name="task_photos">Task Photos</string>
    <string name="play_video_for_reward">Play a Video To Remove Ads!!</string>
    <string name="retry_button_text">Try Playing the Ad Again</string>
    <string name="watch_video_button_text">Watch the Video!!</string>
    <string name="remove_ads">Remove Ads</string>
    <string name="ad_watch_copy">Watching an ad helps keep Taskr freeand we couldn\'t thank you enough for taking the time to do so. In return you get a nice ad-free experience for awhile. A button will appear when the video is ready to be played.</string>
    <string name="show_all_tasks">Show all tasks</string>
    <string name="show_assigned_tasks">Show assigned tasks</string>
    <string name="nearby_tasks">Nearby Tasks</string>
</resources>
